--- a/app/src/main/res/layout/fragment_shoe_details.xml
+++ b/app/src/main/res/layout/fragment_shoe_details.xml
@@ -22,121 +22,139 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/shoe_name_subtitle_text"
-            android:padding="@dimen/space_2x"
-            app:layout_constraintVertical_bias="0.33"
+            app:layout_constraintVertical_bias="0.25"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/layoutShoeName"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextAppearance.H2" />
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layoutShoeName"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/space_7x"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_2x"
             android:hint="@string/enter_shoe_name_hint"
-            android:text="@={shoeData.name}"
-            android:inputType="text"
-            android:textColorHint="#757575"
-            android:imeOptions="actionNext"
             app:layout_constraintTop_toBottomOf="@id/shoeNameSubtitle"
             app:layout_constraintBottom_toTopOf="@id/companySubtitle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="TextFields"
-            android:importantForAutofill="no" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textShoeName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={shoeData.name}"
+                android:inputType="text"
+                android:imeOptions="actionNext" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/companySubtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_5x"
+            android:layout_marginTop="@dimen/space_4x"
             android:text="@string/company_subtitle_text"
-            android:padding="@dimen/space_2x"
             app:layout_constraintTop_toBottomOf="@id/layoutShoeName"
             app:layout_constraintBottom_toTopOf="@id/layoutCompany"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextAppearance.H2"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layoutCompany"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/space_7x"
-            android:text="@={shoeData.company}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_2x"
             android:hint="@string/enter_company_hint"
-            android:inputType="text"
-            android:textColorHint="#757575"
-            android:imeOptions="actionNext"
             app:layout_constraintTop_toBottomOf="@id/companySubtitle"
             app:layout_constraintBottom_toTopOf="@id/sizeShoeSubtitle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="TextFields"
-            android:importantForAutofill="no" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textCompany"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={shoeData.company}"
+                android:inputType="text"
+                android:imeOptions="actionNext" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/sizeShoeSubtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_5x"
+            android:layout_marginTop="@dimen/space_4x"
             android:text="@string/size_shoe_subtitle_text"
-            android:padding="@dimen/space_2x"
             app:layout_constraintTop_toBottomOf="@id/layoutCompany"
             app:layout_constraintBottom_toTopOf="@id/layoutShoeSize"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextAppearance.H2"/>
 
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layoutShoeSize"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/space_7x"
-            android:text="@={shoeData.size}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_2x"
             android:hint="@string/enter_shoe_size_hint"
-            android:inputType="numberDecimal"
-            android:ems="10"
-            android:textColorHint="#757575"
-            android:imeOptions="actionNext"
             app:layout_constraintTop_toBottomOf="@id/sizeShoeSubtitle"
             app:layout_constraintBottom_toTopOf="@id/descriptionSubtitle"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="TextFields"
-            android:importantForAutofill="no" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textShoeSize"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={shoeData.size}"
+                android:inputType="numberDecimal"
+                android:imeOptions="actionNext" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:id="@+id/descriptionSubtitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/description_subtitle_text"
-            android:layout_marginTop="@dimen/space_5x"
-            android:padding="@dimen/space_2x"
+            android:layout_marginTop="@dimen/space_4x"
             app:layout_constraintTop_toBottomOf="@id/layoutShoeSize"
             app:layout_constraintBottom_toTopOf="@id/layoutDescription"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextAppearance.H2" />
 
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/layoutDescription"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/space_7x"
-            android:text="@={shoeData.description}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_2x"
             android:hint="@string/enter_a_description_hint"
-            android:inputType="text"
-            android:imeOptions="actionDone"
-            android:textColorHint="#757575"
             app:layout_constraintTop_toBottomOf="@id/descriptionSubtitle"
             app:layout_constraintBottom_toTopOf="@id/buttonCancel"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:ignore="TextFields"
-            android:importantForAutofill="no" />
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@={shoeData.description}"
+                android:inputType="text"
+                android:imeOptions="actionDone" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/buttonCancel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_6x"
+            android:layout_marginTop="@dimen/space_5x"
             android:layout_marginEnd="@dimen/space_4x"
             android:text="@string/cancel_action"
             app:layout_constraintVertical_bias="0"
