--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -16,13 +16,13 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/welcome_title_text"
-            android:textSize="@dimen/text_size_title"
             app:layout_constraintVertical_bias="0.5"
             app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/welcomeBody"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextAppearance.H1" />
 
         <TextView
             android:id="@+id/welcomeBody"
@@ -31,11 +31,11 @@
             android:layout_marginTop="@dimen/space_5x"
             android:gravity="center"
             android:text="@string/welcome_body_text"
-            android:textSize="@dimen/text_size_body"
             app:layout_constraintTop_toBottomOf="@id/welcomeTitle"
             app:layout_constraintBottom_toTopOf="@id/buttonInstruction"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            style="@style/TextAppearance.H4" />
 
         <Button
             android:id="@+id/buttonInstruction"
