--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="smalt">#003594</color>
+    <color name="seashell">#FFF5EE</color>
+    <color name="silver_chalice">#acacac</color>
 </resources>
